--- a/packages/react/src/ComparisonTable/ComparisonTable.module.css
+++ b/packages/react/src/ComparisonTable/ComparisonTable.module.css
@@ -3,12 +3,17 @@
 */
 .ComparisonTable--heading {
   text-align: left;
+  max-width: 18ch;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: var(--brand-ComparisonTable-spacing-inner-heading);
 }
+
+/* Narrow breakpoint */
 
 @media screen and (min-width: 34rem) {
   .ComparisonTable--heading {
     text-align: center;
-    margin-bottom: var(--base-size-40);
   }
 }
 
