--- a/packages/react/src/Prose/Prose.module.css
+++ b/packages/react/src/Prose/Prose.module.css
@@ -169,6 +169,27 @@
   text-decoration: none;
 }
 
+.Prose a::after {
+  content: '';
+  border-bottom: 1px solid var(--brand-InlineLink-color-rest);
+  height: 0;
+  transition: 0.3s transform;
+  transform: scaleY(1);
+  transform-origin: 50% 100%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.Prose a:hover::after {
+  transform: scaleY(-2);
+}
+
+.Prose a:active::after {
+  border-color: var(--brand-InlineLink-color-pressed);
+}
+
 /* ---------------------------------------------------------- */
 /* 8. Images                                                  */
 /* ---------------------------------------------------------- */
