--- a/packages/react/src/Prose/Prose.module.css
+++ b/packages/react/src/Prose/Prose.module.css
@@ -28,7 +28,7 @@
 /* ---------------------------------------------------------- */
 
 .Prose * + * {
-  margin-block-start: var(--spacing, 1em);
+  margin-block-start: var(--spacing, 1rem);
 }
 
 /* ---------------------------------------------------------- */
