Updated Img Spacing Token

--- a/packages/react/src/Prose/Prose.module.css
+++ b/packages/react/src/Prose/Prose.module.css
@@ -195,7 +195,7 @@
 /* ---------------------------------------------------------- */
 
 .Prose img {
-  --spacing: var(--base-size-48);
+  --spacing: var(--brand-Prose-img-spacing);
   display: block;
   max-width: 100%;
   height: auto;
