--- a/packages/react/src/Prose/Prose.module.css
+++ b/packages/react/src/Prose/Prose.module.css
@@ -171,7 +171,7 @@
 
 .Prose a::after {
   content: '';
-  border-bottom: 1px solid var(--brand-InlineLink-color-rest);
+border-bottom: var(--brand-borderWidth-thin) solid var(--brand-InlineLink-color-rest);
   height: 0;
   transition: 0.3s transform;
   transform: scaleY(1);
