--- a/packages/react/src/Box/Box.module.css
+++ b/packages/react/src/Box/Box.module.css
@@ -1,5 +1,7 @@
 /* ---------------------------------------------------------- */
-/* Prose component                                            */
+/* Box component table of contents                            */
+/* Please ensure that this is kept up to date as the          */
+/* component evolves.                                         */
 /* ---------------------------------------------------------- */
 /* Table of contents:                                         */
 /* 1. Padding                                                 */
