--- a/apps/docs/src/@primer/gatsby-theme-doctocat/components/live-preview-wrapper.css
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/components/live-preview-wrapper.css
@@ -1,6 +1,6 @@
 .bg-red-lines {
   display: inline-block;
-  border: 1px solid var(--base-color-scale-red-2);
+  border: var(--brand-borderWidth-thin) solid var(--base-color-scale-red-2);
   background-image: linear-gradient(
     45deg,
     var(--base-color-scale-red-0) 12.5%,
@@ -16,7 +16,7 @@
 
 .bg-yellow-lines {
   display: inline-block;
-  border: 1px solid var(--base-color-scale-yellow-2);
+  border: var(--brand-borderWidth-thin) solid var(--base-color-scale-yellow-2);
   background-image: linear-gradient(
     45deg,
     var(--base-color-scale-yellow-0) 12.5%,
