--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -4,7 +4,7 @@
   vertical-align: middle;
   align-items: center;
   justify-content: center;
-  transition: box-shadow 0.2s;
+  transition: box-shadow var(--brand-animation-duration-faster);
   text-decoration: none;
   border-radius: 6px;
   cursor: pointer;
