--- a/packages/react/src/Link/Link.module.css
+++ b/packages/react/src/Link/Link.module.css
@@ -3,7 +3,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  transition: box-shadow 0.2s;
+  transition: box-shadow var(--brand-animation-duration-faster);
   text-decoration: none;
   cursor: pointer;
 }
@@ -27,7 +27,7 @@
 
 @media screen and (prefers-reduced-motion: no-preference) {
   .Link::after {
-    transition: transform 0.3s ease;
+    transition: transform var(--brand-animation-duration-fast) ease;
   }
 }
 
