--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -9,7 +9,8 @@
   -webkit-backdrop-filter: blur(16px);
   backdrop-filter: blur(16px);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s cubic-bezier(0.16, 1, 0.3, 1), border-color 0.3s cubic-bezier(0.16, 1, 0.3, 1);
+  transition: background-color var(--brand-animation-duration-fast) var(--brand-animation-easing-default),
+    border-color var(--brand-animation-duration-fast) var(--brand-animation-easing-default);
   height: 75px;
 }
 
@@ -74,7 +75,7 @@
   position: absolute;
   left: calc(-32px + 5px);
   opacity: 0;
-  transition: opacity 0.3s, transform 0.3s ease;
+  transition: opacity var(--brand-animation-duration-fast), transform var(--brand-animation-duration-fast) ease;
   transform: translateX(5px);
   color: var(--brand-color-text-muted);
 }
@@ -148,7 +149,7 @@
     width: 100vw;
     height: calc(100vh - 75px);
     animation: fade-in-down 500ms;
-    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    animation-timing-function: var(--brand-animation-easing-default);
   }
 }
 
@@ -199,7 +200,7 @@
     animation-duration: 500ms;
     animation-delay: calc(var(--animation-order) * 80ms);
     animation-fill-mode: both;
-    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    animation-timing-function: var(--brand-animation-easing-default);
   }
 }
 
@@ -263,7 +264,7 @@
     height: 2px;
     background-color: var(--brand-SubdomainNavBar-border-nav-default);
     opacity: 0;
-    transition: opacity 300ms, transform 300ms;
+    transition: opacity var(--brand-animation-duration-fast), transform var(--brand-animation-duration-fast);
     opacity: 1;
     transform: scale(0);
     transform-origin: center;
@@ -282,7 +283,7 @@
   }
 
   .SubdomainNavBar-overflow-menu-item .SubdomainNavBar-link {
-    transition: background-color cubic-bezier(0.16, 1, 0.3, 1) 250ms;
+    transition: background-color var(--brand-animation-easing-default) 250ms;
     background-color: var(--brand-SubdomainNavBar-canvas-overflow-default);
     color: var(--brand-SubdomainNavBar-fg-overflow-default);
   }
@@ -330,7 +331,7 @@
   background-color: var(--base-color-scale-white-0);
   border-radius: var(--brand-borderRadius-large);
   animation: fade-in-down 0.25s, enlarge-shadow 250ms forwards;
-  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+  animation-timing-function: var(--brand-animation-easing-default);
   box-shadow: 0px 8px 24px rgba(1, 4, 9, 0.15);
   overflow: hidden;
 }
@@ -369,7 +370,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: border 250ms cubic-bezier(0.16, 1, 0.3, 1), box-shadow 250ms ease;
+  transition: border 250ms var(--brand-animation-easing-default), box-shadow 250ms ease;
   border-radius: var(--brand-borderRadius-medium);
   box-shadow: 0 0 0 2px transparent;
 }
@@ -396,7 +397,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .SubdomainNavBar-menu-button-bar {
-    transition-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    transition-timing-function: var(--brand-animation-easing-default);
     transition-duration: 500ms;
     transition-property: opacity, transform;
   }
@@ -477,7 +478,7 @@
     animation-duration: 500ms;
     animation-delay: calc(10 * 80ms);
     animation-fill-mode: both;
-    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    animation-timing-function: var(--brand-animation-easing-default);
   }
 
   .SubdomainNavBar-inner-container--search-open .SubdomainNavBar-button-area--visible {
@@ -526,8 +527,8 @@
     backdrop-filter: blur(100px);
     height: 100vh;
     width: 100vw;
-    animation: fade-in-down 300ms;
-    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    animation: fade-in-down var(--brand-animation-duration-fast);
+    animation-timing-function: var(--brand-animation-easing-default);
   }
 }
 
