--- a/packages/react/src/forms/Radio/Radio.module.css
+++ b/packages/react/src/forms/Radio/Radio.module.css
@@ -69,7 +69,7 @@ Fixes safari bug where outline doesn't respect border-radius
   display: block;
   transform: scale(0.7);
   opacity: 0;
-  transition: transform 0.35s cubic-bezier(0.33, 1, 0.68, 1), opacity 0.35s cubic-bezier(0.33, 1, 0.68, 1);
+  transition: transform 0.35s var(--brand-animation-easing-glide), opacity 0.35s var(--brand-animation-easing-glide);
 }
 @media (prefers-reduced-motion) {
   .Radio-dot {
