--- a/packages/react/src/LogoSuite/LogoSuite.module.css
+++ b/packages/react/src/LogoSuite/LogoSuite.module.css
@@ -42,13 +42,13 @@
 .LogoSuite__logobar--variant-muted svg,
 .LogoSuite__logobar--variant-muted a {
   width: auto;
-  height: 40px;
+  height: var(--base-size-40);
 }
 
 .LogoSuite__logobar--variant-emphasis svg,
 .LogoSuite__logobar--variant-emphasis a {
   width: auto;
-  height: 48px;
+  height: var(--base-size-48);
 }
 
 .LogoSuite__logobar--variant-muted svg,
@@ -84,7 +84,7 @@
   flex-direction: column;
   gap: var(--base-size-40);
   margin: auto;
-  max-width: 100vw;
+  max-width: 100dvw;
 }
 
 .LogoSuite__logobar-marqueeGroup {
@@ -95,7 +95,7 @@
   gap: var(--brand-LogoSuite-logobar-marquee-gap);
   min-width: 100%;
   animation-name: LogobarScrollX;
-  animation-duration: 20s;
+  animation-duration: var(--brand-LogoSuite-logobar-marquee-default);
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   animation-direction: normal;
