--- a/packages/react/src/Hero/Hero.module.css
+++ b/packages/react/src/Hero/Hero.module.css
@@ -18,6 +18,10 @@
   justify-content: center;
 }
 
+.Hero-label {
+  margin-block-end: var(--base-size-24);
+}
+
 .Hero-heading {
   margin: 0;
   max-width: 18ch;
