--- a/packages/react/src/SectionIntro/SectionIntro.module.css
+++ b/packages/react/src/SectionIntro/SectionIntro.module.css
@@ -20,6 +20,10 @@
   max-width: 18ch;
 }
 
+.SectionIntro-label {
+  margin-block-end: var(--base-size-8);
+}
+
 .SectionIntro-description {
   max-width: 50ch;
 }
