--- a/packages/react/src/VideoPlayer/VideoPlayer.module.css
+++ b/packages/react/src/VideoPlayer/VideoPlayer.module.css
@@ -7,7 +7,8 @@
 /* 2. Center Play Button                                      */
 /* 4. Title                                                   */
 /* 5. Controls                                                */
-/* 6. Tooltip                                                 */
+/* 6. Range Element                                           */
+/* 7. Tooltip                                                 */
 /* ---------------------------------------------------------- */
 
 /* ---------------------------------------------------------- */
@@ -119,6 +120,11 @@
   color: white;
 }
 
+.VideoPlayer__progressBar2 {
+  width: 100%;
+  height: 6px;
+}
+
 .VideoPlayer__progressBar {
   -webkit-appearance: none; /* Override default CSS styles */
   appearance: none;
@@ -174,7 +180,60 @@
 }
 
 /* ---------------------------------------------------------- */
-/* 6. Tooltip                                                 */
+/* 6. Range Element                                           */
+/* ---------------------------------------------------------- */
+.VideoPlayer__range {
+  position: relative;
+  width: 100%;
+  min-width: 50px;
+  height: 6px;
+  background-color: white;
+  border-radius: 3px;
+}
+
+.VideoPlayer__rangeInput {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  z-index: 1;
+  display: block;
+  width: 100%;
+  height: 6px;
+  margin: 0;
+  cursor: pointer;
+  background: transparent;
+  position: absolute;
+  top: 0;
+}
+
+.VideoPlayer__rangeProgress {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  overflow: hidden;
+  background: rgba(225, 225, 225, 0.5);
+  border: 0;
+  border-radius: 3px;
+  width: 100%;
+  position: absolute;
+  height: 6px;
+  top: 0;
+}
+
+.VideoPlayer__rangeProgress::-webkit-progress-bar {
+  background-color: rgba(225, 225, 225, 0.5);
+}
+
+.VideoPlayer__rangeProgress::-webkit-progress-value {
+  background-color: #218bff;
+}
+
+.VideoPlayer__rangeProgress::-moz-progress-bar {
+  background: #218bff;
+}
+
+/* ---------------------------------------------------------- */
+/* 7. Tooltip                                                 */
 /* ---------------------------------------------------------- */
 
 .VideoPlayer__tooltip {
